# kafka_realtime_data_streaming

./: .gitignore  docker-compose.yml  pyproject.toml  spark_stream.py
dags/: kafka_stream.py
